samples/_failures_safe/1761346502_142c4f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfc7709c.c: In function ‘main’:
./samples/SAFE/__tmp_dfc7709c.c:147:5: error: expected expression at end of input
  147 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_dfc7709c.c:147:5: error: expected declaration or statement at end of input
